--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/material-top-tabs": "^5.3.15",
-    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/native": "^5.9.8",
+    "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^5.14.4",
     "native-base": "^3.1.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-fast-image": "^8.3.7",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-push-notification": "^8.0.0",
     "react-native-reanimated": "^2.1.0",
-    "react-native-safe-area-context": "^3.3.1",
-    "react-native-screens": "^3.1.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.6.0",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^2.16.0",
     "react-native-vector-icons": "^8.1.0",
